@@ -1,3 +1,9 @@
+2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
+	* enabled admin to prevent users from changing the times of bookings or deleting bookings within a given time period of the booking (log/book paradigm) 
+
+2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
+	* Bugfixes and clean-ups for $TABLEPREFIX 
+
 2005-05-07 Stuart Prescott <s.prescott@unimelb.edu.au>
 	* first cut at implementing a TABLEPREFIX to permit shared database 
 
